syntax = "proto3";

package product;

option go_package = "./product-service/gRPC/service";

service ProductService{
    rpc GetProductInfor (ProductRequest) returns (ProductResponse);
    rpc CheckStock (StockRequest) returns (StockResponse);
    rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse);
}

message ProductRequest{
    string id = 1;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    float price = 3;
    int32 stock = 4;
}

message StockRequest{
    repeated StockItem items = 1;
}

message StockItem {
    string product_id = 1;
    int32 quantity = 2;
}

message StockResponse{
    repeated StockStatus status = 1;
}

message StockStatus {
    string product_id = 1;
    bool in_stock = 2;
    int32 avaiable_quantity = 3;
}

message UpdateStockRequest {
    repeated StockItem items = 1;
}

message UpdateStockResponse {
    string product_id = 1;
    repeated StockUpdateStatus update_status = 2;
}

message StockUpdateStatus {
    string product_id = 1;
    bool updated = 2;
    string message = 3;
}